prevent search button from refreshing the page and added visible and invisible functions to the search button

--- a/project1.css
+++ b/project1.css
@@ -36,9 +36,21 @@ img{
     color: white;
 }
 h2{
-    padding: 10px;
+    padding: 10px; 
     font-family: Arial, Helvetica, sans-serif;
 
+}
+p{
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+#welcome{
+  /* float: right; */
+  margin-top: 10px;
+ 
+}
+p.card-text{
+    font-family:'Source Sans Pro', ;
+    /* font-weight: lighter; */
 }
 .row{
     /* padding: 10px; */
@@ -53,7 +65,7 @@ ul{
     margin-top: 50px;
 }
 div.card-body{
- padding-left: 10px;
+
  
 }
 /* #searchButtonForm{
